--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,12 @@
+@book{Rodrigues2016Functional,
+  title = {Functional Programming and Unit Testing for Data Munging with R},
+  author = {Bruno Rodrigues},
+  year = {2016},
+  publisher = {LeanPub},
+  url = {https://b-rodrigues.github.io/fput/},
+  date = {2016-12-23}
+}
+
 @book{rosling2019factfulness,
   title={팩트풀니스: 우리가 세상을 오해하는 10가지 이유와 세상이 생각보다 괜찮은 이유},
   author={로슬링, 한스},
