update 그래프 문법

--- a/to_do.qmd
+++ b/to_do.qmd
@@ -140,6 +140,12 @@ done
 
 첨부된 파일 전체에 대해서 처음부터 끝까지 맞춤범 검사와 함께 문장이 매끄럽게 작성되도록 윤문한다.
 
+## 클로드 프롬프트 ----------
+
+앞으로 모두 하다. 한다. 했다와 같이 평서문으로 문장을 종결한다.
+
+그리고, 글머리표는 없이 대답한다. 1,2,3 ... * 이런것 없다ggp
+
 # 파이썬 패키지 --------------
 
 virtualenv_install("d:/envs/gpt-ds", c("python-dotenv", "openai"))
