update viz chapters

--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,14 @@
+@article{anscombe1973graphs,
+  title={Graphs in statistical analysis},
+  author={Anscombe, Francis J},
+  journal={The american statistician},
+  volume={27},
+  number={1},
+  pages={17--21},
+  year={1973},
+  publisher={Taylor \& Francis}
+}
+
 @book{Rodrigues2016Functional,
   title = {Functional Programming and Unit Testing for Data Munging with R},
   author = {Bruno Rodrigues},
