--- a/to_do.qmd
+++ b/to_do.qmd
@@ -144,7 +144,7 @@ done
 
 앞으로 모두 하다. 한다. 했다와 같이 평서문으로 문장을 종결한다.
 
-그리고, 글머리표는 없이 대답한다. 1,2,3 ... * 이런것 없다ggp
+그리고, 글머리표는 없이 대답한다. 1,2,3 ... * 이런것 없다.
 
 # 파이썬 패키지 --------------
 
