--- a/ggplot2_pattern.qmd
+++ b/ggplot2_pattern.qmd
@@ -4,19 +4,151 @@
 source("_common.R")
 ```
 
-# 시각화 패턴 {#ggplot-pattern}
+# 시각화 패턴 {#sec-ggplot-pattern}
+
+컴퓨터를 기반으로 한 시각화 시스템은 시각적으로 데이터를 표현함으로서 
+사람이 작업을 더욱 효율적으로 수행할 수 있도록 돕는다.
+시각화는 시각지능을 갖춘 인공지능을 통해 사람을 대체하는데 초점을 둔 것이라보다 
+시각화를 통해 인간능력을 보조하고 증강시키는데 유용하다.
+따라서, 완전 자동화 해결책이 존재하고 신뢰성이 있는 경우 대안이 존재하는 경우 시각화는 필요하지 않다. 하지만, 많은 분석과 개발문제에 어떤 질문을 던져야 되는지 사전에 알고 있는 경우가 적어, 명세가 분명하지 않는 경우 시각화가 적합하다.
+
+## 시각화 이유 {#viz-tamara-why}
+
+시각화는 최종 데이터분석 결과를 표현하는 데이터 과학 제품과 인포그래픽으로 많은 관심을 받았다. 하지만 꼭 시각화가 데이터 과학 최종 결과물로 의미가 있는 것은 아니다. 인포그래픽과 같은 최종 결과를 제작하는 과정은 수많은 시도와 실패의 결과물로 조금씩 진전을 이뤄낸 산출물이다. 이 과정에서 데이터에 대한 충분한 이해가 필요한데 원본 데이터를 눈으로 일일이 살펴보거나 요약 통계량으로 데이터가 갖고 있는 의미를 충분히 살펴보는데는 한계가 있다. 
+원데이터를 첫번째 행부터 마지막행까지 첫번째 변수부터 마지막 변수까지 일일이 살펴보는 작업은 상당한 인지부하를 가져와 쉽게 피로를 유발한다. **인지부하(cognitive load)**를 **시각적 지각(perception)**으로 해당 작업을 바꿔 수월히 업무를 수행하는데 필수적인 기법이 **시각화(Visualization)**라고 볼 수 있다.
+
+``` {r}
+#| label: viz-motivation
+library(tidyverse)
+
+datasets::women %>% 
+  gt::gt() |> 
+  gtExtras::gt_theme_538()
+```
+
+
+`datasets` 패키지에 포하함된 `women` 데이터는 이미 정렬이 되어 있어서, 신장이 커짐에 따라 체중이 증가하는 것을 알 수 있지만, 데이터만 보고 이해하려면 인지적으로 데이터 한줄을 읽고 머리속으로 생각하고, 두번째 줄을 읽고 생각하고, ... 이런 과정을 반복하면서 인지적 부하가 증가하게 된다.
+하지만, 시각적으로 표현하게 되면 한눈에 신장과 체중 관계를 볼 수 있다.
+
+`women` 데이터셋이 몸무게는 파운드(lbs), 신장(inch)로 되어 있어 우리나라에서 사용하는
+kg, cm 단위로 시각화에 앞서 변환시킨다.
+
+``` {r viz-motivation-woman, echo = TRUE}
+women %>% 
+  mutate(height = 2.54 * height,
+         weight = 0.45 * weight) %>% 
+  ggplot(aes(y=weight, x=height)) + 
+    geom_smooth(color='pink') +
+    geom_point(color='blue', size=2) +
+    labs(x = "신장",
+         y = "몸무게",
+         title = "신장과 몸무게 관계")
+```
+
+
+## 앤스콤 4종류 데이터 {#viz-anscombe}
+
+앤스콤[@anscombe1973graphs]은 1973년 "Anscombe's Quartet"로 알려진 동일한 통계량을 갖는 4종류 데이터셋을 만들어서 시각화의 중요성을 일깨웠다. 
+앤스콤 데이터셋은 평균, 분산, 상관계수, 회귀직선 등 주요 통계치가 매우 유사한 4쌍의 데이터로 구성되어 있다. 그러나 이 데이터들을 그래프로 시각화했을 때 서로 완전히 다른 패턴과 관계성을 보여준다.
+
+단순히 숫자로 요약된 통계만으로는 데이터의 특성을 제대로 파악하기 어려울 수 있다는 점을 시사하는 것으로 데이터를 시각적으로 표현함으로써 숨겨진 패턴, 이상치, 추세 등을 직관적으로 발견할 수 있다. 두 변수 `x`, `y`에 대한 통계량에 대한 정보는 다음과 같다.
+
+|  통계량     |   값  |
+|:-------------:|:-------:|
+|  평균(`x`)  |  9    |
+|  분산(`x`)  |  11   |
+|  평균(`y`)  |  7.5  |
+|  분산(`y`)  |  4.1  |
+|  상관계수   |  0.82  |
+|  회귀식     |  $y = 3.0 + 0.5 \times x$ |
+
+
+### 데이터셋 기술통계량 {#viz-anscombe-descriptive}
+
+`datasets` 패키지 내부에 `anscombe` 명칭으로 데이터셋이 포함되어 있어 앞서 제기한 
+기술통계량이 맞는지 평균, 분산, 상관계수, 회귀식 회귀계수를 통해 소수점 아래 일부 차이가 있지만 동일하다는 것을 확인할 수 있다.
+
+```{webr-r}
+#| label: viz-anscombe-descriptive
+datasets::anscombe
+data(anscombe)
+
+# x1, x2, x3, x4 평균
+purrr::map_dbl(1:4, function(x) mean(anscombe[,x]))
+
+# x1, x2, x3, x4 분산
+purrr::map_dbl(1:4, function(x) var(anscombe[,x]))
+
+# y1, y2, y3, y4 평균
+purrr::map_dbl(5:8, function(x) mean(anscombe[,x]))
+
+# y1, y2, y3, y4 분산
+purrr::map_dbl(5:8, function(x) var(anscombe[,x]))
+
+# x1:y1 ~ x4:y4 상관계수
+# 상관계수
+purrr::map_dbl(1:4, function(x) cor(anscombe[, x], anscombe[, x+4]))
+
+# y1:x1-x4 ~ y1:x1-x4 회귀분석
+lm_fit <- function(y1, x1, dat) {
+  the_fit <- lm(y1 ~ x1, dat)
+  setNames(data.frame(t(coef(the_fit))), c("intercept", "slope"))
+}
+
+reg_fits <- anscombe %>%
+  do(reg1 = lm_fit(y1, x1, .), reg2 = lm_fit(y2, x2, .), 
+     reg3 = lm_fit(y3, x3, .), reg4 = lm_fit(y4, x4, .))
+
+unlist(reg_fits$reg1)
+unlist(reg_fits$reg2)
+unlist(reg_fits$reg3)
+unlist(reg_fits$reg4)
+```
+
+### 데이터셋 시각화 {#viz-anscombe-viz}
+
+`anscombe` 데이터셋 기술 통계량을 통해 4종류 데이터셋이 동일한 분도를 갖고 있고
+표본추출로 보면 모집단에서 잘 추출된 표본이라고 볼수도 있으나 시각화를 통해 보면
+전혀 다른 특성을 갖는 데이터라는 것을 한번에 알 수 있다. 즉, 가장 일반적으로 
+첫번째 데이터셋과 같은 특성이 기술통계량을 통해 존재한다는 것이 일반적이다.
+하지만, 2차식이 내재된 두 변수의 관계(두번째 데이터셋)일 수도 있으며,
+강한 선형 관계가 두변수 사이 존재하지만 튀는 관측점이 하나 존재하는 관계(세번째 데이터셋)일 수도 
+있으며 네번째 데이터세의 경우 데이터 입력과정에서 오류가 의심되는 경우(네번째 데이터셋)일 수도 있다.
+
+
+```{r}
+#| label: fig-viz-anscombe-viz
+#| fig-cap: 앤스콤 데이터셋 시각화
+#| fig-align: center
+# https://rpubs.com/debosruti007/anscombeQuartet 코드를 일부 변형하여 시각화 사용
+p1 <- ggplot(anscombe) + geom_point(aes(x1, y1), color = "darkorange", size = 3) + theme_bw() + scale_x_continuous(breaks = seq(4, 20, 2)) + scale_y_continuous(breaks = seq(0, 12, 2)) + geom_abline(intercept = 3, slope = 0.5, color = "cornflowerblue") + expand_limits(x = 4, y = 4) + labs(title = "첫번째 데이터셋")
+
+p2 <- ggplot(anscombe) + geom_point(aes(x2, y2), color = "darkorange", size = 3) + theme_bw() + scale_x_continuous(breaks = seq(4, 20, 2)) + scale_y_continuous(breaks = seq(0, 12, 2)) + geom_abline(intercept = 3, slope = 0.5, color = "cornflowerblue") + expand_limits(x = 4, y = 4) + labs(title = "두번째 데이터셋")
+
+p3 <- ggplot(anscombe) + geom_point(aes(x3, y3), color = "darkorange", size = 3) + theme_bw() + scale_x_continuous(breaks = seq(4, 20, 2)) + scale_y_continuous(breaks = seq(0, 12, 2)) + geom_abline(intercept = 3, slope = 0.5, color = "cornflowerblue") + expand_limits(x = 4, y = 4) + labs(title = "세번째 데이터셋")
+
+p4 <- ggplot(anscombe) + geom_point(aes(x4, y4), color = "darkorange", size = 3) + theme_bw() + scale_x_continuous(breaks = seq(4, 20, 2)) + scale_y_continuous(breaks = seq(0, 12, 2)) + geom_abline(intercept = 3, slope = 0.5, color = "cornflowerblue") + expand_limits(x = 4, y = 4) + labs(title = "네번째 데이터셋")
+
+gridExtra::grid.arrange(p1, p2, p3, p4, ncol=2, top = "앤스컴 콰르텟(Anscombe's Quartet)")
+```
+
+시각화는 데이터를 이해하고 통찰력을 얻는데 매우 중요한 도구이다. 기본적인 그래프 유형을 넘어, 데이터 특성과 전달하고자 하는 메시지에 맞는 효과적인 그래프를 만드는 것이 중요하다. 
+
+`ggplot2` 문법을 활용하여 6가지 고급 그래프를 제작하는 방법을 살펴본다. 시계열 데이터에 라벨을 추가하는 방법, 막대그래프에 그룹별 색상을 적용하는 기법, 추세선에 강조와 라벨을 더하는 방법도 알아본다. 또한 롤리팝 그래프, 아령 그래프, 경사 그래프 등 데이터 비교와 변화를 효과적으로 나타내는 그래프들도 코드와 함께 상세히 살펴본다.
 
 ## 라벨 붙은 시계열  {#gghighlight-timeseries}
 
 시계열 데이터를 제작하게 되면 추세를 파악할 수 있지만 결국 그래서 가장 최근 값이 어떻게 되는지 관심이 많다.
 이런 사용자 요구를 맞추는데 시계열 데이터 마지막 시점에 라벨값을 붙이게 되면 가독성도 좋아진다.
 기본적인 작업흐름은 데이터셋에서 가장 최근 관측점을 뽑아서 별도 데이터프레임으로 저장하고 
-이를 `geom_text()` 혹은 `geom_text_repel()` 함수를 사용해서 해결한다.
+이를 `geom_text()` 혹은 `geom_text_repel()` 함수를 사용해서 해결한다.[^blogr]
 
-BLOGR 님이 작성한 [Label line ends in time series with ggplot2](https://drsimonj.svbtle.com/label-line-ends-in-time-series-with-ggplot2) 코드를 참조하여 `ggplot`으로 코드를 작성한다.
+[^blogr]: BLOGR [Label line ends in time series with ggplot2](https://drsimonj.svbtle.com/label-line-ends-in-time-series-with-ggplot2) 코드를 참조하여 `ggplot` 코드가 완성되었다.
 
 ```{r}
-#| label: best-viz-label
+#| label: fig-best-viz-label
+#| fig-cap: 시계열 데이터 마지막 관측점에 라벨을 붙이는 방법
+#| fig-align: center
 ## 마지막 관측점
 orange_ends <- datasets::Orange %>% 
   group_by(Tree) %>% 
@@ -46,8 +178,9 @@ RStudio를 거쳐 IBM에서 근무하고 있는 Alison Presmanes Hill 의 GitHub
 
 
 ```{r}
-#| label: best-viz-barbplot-color
-
+#| label: fig-best-viz-barbplot-color
+#| fig-cap: 막대그래프 그룹별 색상 적용
+#| fig-align: center
 ratings <- read_csv("http://bit.ly/cs631-ratings",
                     na = c("", "NA", "N/A"))
 
@@ -90,8 +223,9 @@ ratings_bonanza1 %>%
 라벨도 동일한 방법으로 `geom_text()`를 두개 포함시켜 강조하고자하는 색상과 글꼴크기도 달리 지정한다.
 
 ```{r}
-#| label: best-viz-trend-line
-
+#| label: fig-best-viz-trend-line
+#| fig-cap: 추세선을 강조하고 라벨을 추가한 그래프
+#| fig-align: center
 ratings %>% 
   mutate(episode = as.factor(episode)) %>% 
   ggplot(aes(x = episode, y = viewers_7day, group = series)) +
@@ -110,7 +244,7 @@ ratings %>%
 ```
 
 
-## 롤리팝(lolli-pop) 그래프 {#gghighlight-barplot-color}
+## 롤리팝 그래프 {#lollipop-color}
 
 롤리팝(Lollipop) 사탕 그래프는 막대그래프와 클리블랜드 점그래프를 합성한 것으로 한축에는 연속형, 다른 한축에는 범주형을 두고 사용자의 관심을 점그래프로 집중시키는데 효과적이다. 단순히 막대그래프를 제작하는 것과 비교하여 임팩트있는 시각화를 가능하게 한다.
 
@@ -125,8 +259,9 @@ ratings %>%
 `percollege` 변수는 카운티(우리나라 군에 해당) 별 대학졸업비율을 나타낸다.
 
 ```{r}
-#| label: best-viz-lolli-pop
-
+#| label: fig-best-viz-lolli-pop
+#| fig-cap: 롤리팝 사탕 그래프
+#| fig-align: center
 # 데이터 -----
 ## 롤리팝 사탕 그래프를 위해 상위 15개 군만 추출
 ohio_top15 <- ggplot2::midwest %>%
@@ -174,6 +309,7 @@ cowplot::plot_grid(ohio_barplot_g, ohio_dotplot_g, ohio_lollipop_g, nrow=1)
 
 ```{r}
 #| label: best-viz-lolli-pop-polish
+#| fig-cap: 롤리팝 사탕 그래프 외양과 설명 추가
 ## 평균기준 대졸비율 비교를 위한 데이터셋 준비
 ohio <- midwest %>%
         filter(state == "OH") %>%
@@ -197,8 +333,10 @@ ohio %>%
     geom_segment(aes(x = Avg, y = county, 
                      xend = percollege, yend = county), color = "grey50") +
     geom_point(size=7) +
-    annotate("text", x = 27.5, y = "WOOD", label = "평균이상", color = "#00BFC4", size = 5, hjust = -0.1, vjust = 5) +
-    annotate("text", x = 27.5, y = "WOOD", label = "평균이하", color = "#F8766D", size = 5, hjust = +1.1, vjust = -1) +
+    annotate("text", x = 27.5, y = "WOOD", label = "평균이상", 
+             color = "#00BFC4", size = 5, hjust = -0.1, vjust = 5) +
+    annotate("text", x = 27.5, y = "WOOD", label = "평균이하", 
+             color = "#F8766D", size = 5, hjust = +1.1, vjust = -1) +
     geom_text(color="black", size=3) +
     theme_minimal(base_family = "MaruBuri") +
     labs(x="대졸 비율(%)", y="",
@@ -218,8 +356,9 @@ ohio %>%
 TV 시리즈별로 회차를 달리하여 첫번째와 가장 마지막 시청자수를 비교하여 시각화하는데 **아령(dumbbell) 그래프**가 적절한 예시가 될 것으로 보인다. 이를 위해서 `ggplot()`에 들어가는 자료형을 미리 준비하고 이에 맞춰 `geom_line()`과 `geom_point()`를 결합시켜 시각화한다.
 
 ```{r}
-#| label: best-viz-dumbbell-plot
-
+#| label: fig-best-viz-dumbbell-plot
+#| fig-cap: 아령 그래프로 시리즈별 시청자수 비교
+#| fig-align: center
 ratings_dumbbell_df <- ratings %>% 
   select(series, episode, viewers_7day) %>% 
   group_by(series) %>% 
@@ -258,8 +397,9 @@ ratings_dumbbell_df %>%
 한눈에 파악할 수 있다.
 
 ```{r}
-#| label: best-viz-slope-plot-base
-
+#| label: fig-best-viz-slope-plot-base
+#| fig-cap: 경사그래프로 시리즈별 시청자수 비교
+#| fig-align: center
 ratings_dumbbell_df %>% 
   ggplot(aes(x = episode, y = viewers_7day, group = series)) +
     geom_point(data = filter(ratings_dumbbell_df, !series == 8), alpha = .25) +
@@ -285,7 +425,9 @@ ratings_dumbbell_df %>%
 기본 Base 그래픽을 염두에 두고 상기 TV 연속물 경사그래프를 다음과 같이 작성할 수 있다.
 
 ```{r}
-#| label: best-viz-slope-plot-slopegraph-series
+#| label: fig-viz-slope-plot-slopegraph-series
+#| fig-cap: 전용 패키지 사용 경사그래프로 시리즈별 시청자수 비교
+#| fig-align: center
 # devtools::install_github("leeper/slopegraph")
 library(slopegraph)
 
@@ -298,7 +440,7 @@ ratings_dumbbell_df %>%
   slopegraph(., col.lines = series_cols, col.lab = series_cols, 
             cex.lab = 1.5, cex.num = 1.0,
             xlim = c(-0.5, 3.5), 
-            xlabels = c('첫회','최종회'))
+            xlabels = c('첫회','최종회'),family = "NanumGothic")
 ```
 
 `slopegraph()` 함수 대신 `ggslopegraph()` 함수를 사용하게 되면 `ggplot()`으로도 시각화를 할 수 있다.
@@ -306,8 +448,9 @@ ratings_dumbbell_df %>%
 따라서, 앞서 `ggplot` 기반 경사그래프를 제작하고자 하는 경우 `ggslopegraph()`을 통해서도 `ggplot` 나머지 기능을 그대로 적용 가능하다.
 
 ```{r}
-#| label: best-viz-slope-plot-ggslopegraph-series
-
+#| label: fig-viz-slope-plot-ggslopegraph-series
+#| fig-cap: ggplot 패키지 사용 경사그래프로 시리즈별 시청자수 비교
+#| fig-align: center
 ratings_dumbbell_df %>% 
   pivot_wider(names_from = episode, values_from = viewers_7day) %>% 
   as.data.frame() %>% 
