--- a/data_structure.qmd
+++ b/data_structure.qmd
@@ -4,7 +4,7 @@ editor_options:
   chunk_output_type: console
 ---
 
-# 자료구조 {#data-structure}
+# 자료구조 {#sec-data-structure}
 
 R 프로그래밍에서 데이터를 다루는 기본적인 자료구조에 대해 살펴본다. `CSV` 파일 같은 외부 데이터를 R로 불러오는 것부터 시작해서, R에서 사용되는 실수형, 정수형, 복소수형, 논리형, 문자형 등 다양한 자료형의 특성을 이해하고, 기본 자료형들로 구성되는 벡터, 요인, 리스트, 데이터프레임 등의 자료구조가 서로 어떻게 연관되어 있는지 살펴본다. 특히 범주형 데이터를 표현하는 요인형에 대해서도 다루며, 이 과정에서 실제 데이터 분석에서 마주치는 다양한 유형의 데이터를 R이 어떻게 유연하게 처리할 수 있는지 기본기를 익히게 된다.
 
