--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,41 @@
+@article{AbdulMajedRaja2020,
+  title={Penguins Dataset Overview - iris alternative in R
+using {palmerpenguins}},
+  author={AbdulMajedRaja},
+  journal={Programming with R},
+  year={2020},
+  month={June},
+  day={17},
+  url={https://www.programmingwithr.com/penguins-dataset-overview-iris-alternative-in-r/}
+}
+
+@article{Levy2019,
+  title={Eugenics and the Ethics of Statistical Analysis},
+  author={Ido Levy},
+  journal={GEORGETOWN PUBLIC POLICY REVIEW},
+  year={2019},
+  month={December},
+  day={16},
+  url={https://gppreview.com/2019/12/16/eugenics-ethics-statistical-analysis/},
+}
+
+
+@Manual{penguin2020,
+  title = {palmerpenguins: Palmer Archipelago (Antarctica) penguin data},
+  author = {Allison Marie Horst and Alison Presmanes Hill and Kristen B Gorman},
+  year = {2020},
+  note = {R package version 0.1.0},
+  doi = {10.5281/zenodo.3960218},
+  url = {https://allisonhorst.github.io/palmerpenguins/},
+}
+
+@book{fisher1930genetical,
+  title={The Genetical Theory of Natural Selection},
+  author={Fisher, Ronald},
+  publisher={The Clarendon Press},
+  year={1930},
+}
+
 @article{anscombe1973graphs,
   title={Graphs in statistical analysis},
   author={Anscombe, Francis J},
