--- a/intro_penguins.qmd
+++ b/intro_penguins.qmd
@@ -2,12 +2,12 @@
 title: "펭귄 데이터셋"
 editor_options: 
   chunk_output_type: console
+editor: 
+  markdown: 
+    wrap: 72
 ---
 
-
 # 펭귄 데이터셋
-
-## 펭귄 데이터 출현
 
 미국에서 "George Floyd"가 경찰에 의해 살해되면서 촉발된 ["Black Lives
 Matter"](https://ko.wikipedia.org/wiki/Black_Lives_Matter) 운동은
@@ -18,20 +18,19 @@ Matter"](https://ko.wikipedia.org/wiki/Black_Lives_Matter) 운동은
 기사로 낼 정도로 적극적으로 나서고 있다.
 
 데이터 과학에서 최근 R.A. Fisher의 과거 저술한 "The genetical theory of
-natural selection" [@fisher1958genetical] 우생학(Eugenics) 대한
-관점이 논란이 되면서 R 데이터 과학의 첫
-데이터셋으로 붓꽃 `iris` 데이터를 다른 데이터, 즉 펭귄 데이터로 대체하는
-움직임이 활발히 전개되고 있다.
+natural selection" [@fisher1930genetical] 우생학(Eugenics) 대한 관점이
+논란이 되면서 R 데이터 과학의 첫 데이터셋으로 붓꽃 `iris` 데이터를 다른
+데이터, 즉 펭귄 데이터로 대체하는 움직임이 활발히 전개되고 있다.
 [`palmerpenguins`](https://github.com/allisonhorst/palmerpenguins)
-[@penguin2020] 데이터셋이 대안으로 많은 호응을 얻고 있다.
-[@AbdulMajedRaja2020, @Levy2019]
+데이터셋 [@penguin2020; @AbdulMajedRaja2020; @Levy2019]이 대안으로 많은
+호응을 얻고 있다.
 
 ## 펭귄 공부 {#penguins-study}
 
 팔머(Palmer) 펭귄은 3종이 있으며 자세한 내용은 다음 나무위키를 참조한다.
-[^1]
+[^intro_penguins-1]
 
-[^1]: [신발끈 여행사,
+[^intro_penguins-1]: [신발끈 여행사,
     관광안내자료](http://www.shoestring.kr/shoecast/aaa/sp_01_peninsula/peninsula.html)
 
 -   [젠투 펭귄(Gentoo Penguin)](https://namu.wiki/w/젠투펭귄): 머리에
@@ -50,15 +49,16 @@ natural selection" [@fisher1958genetical] 우생학(Eugenics) 대한
     살아가며 일부일처제를 지키기 때문에 짝짓기 이후에도 부부로써
     오랫동안 함께 살아간다.
 
-
-![팔머 펭귄 3종 세트](images/penguin-species.png)
+![팔머 펭귄 3종 세트](images/penguin-species.png){#fig-penguin-species
+fig-align="center" width="587"}
 
 다음으로 `iris` 데이터와 마찬가지로 펭귄 3종을 구분하기 위한 변수로
 조류의 부리에 있는 중앙 세로선의 융기를 지칭하는 능선(`culmen`)
 길이(culmen length)와 깊이(culmen depth)를 이해하면 된다.
 
-
-![팔머 펭귄 능선 변수](images/penguin-species-variable.png)
+![팔머 펭귄 능선
+변수](images/penguin-species-variable.png){#fig-penguin-species-variable
+fig-align="center"}
 
 ## 펭귄 서식지 {#penguin-home}
 
@@ -139,19 +139,22 @@ glimpse(penguins)
 수 있다. 또한, 범주형 변수가 3개, 숫자형 변수가 4개로 구성되어 있다.
 그외 더 자세한 사항은 범주형, 숫자형 변수에 대한 요약 통계량을 참조한다.
 
-```{r penguins-EDA-data-structure}
-skimr::skim(penguins)
+```{r}
+#| label: penguins-EDA-data-structure
+library(skimr)
+penguins |> 
+  skim()
 ```
 
-데이터가 크지 않아 `DT` 팩키지를 통해 데이터 전반적인 내용을 살펴볼 수
-있다.
+데이터가 크지 않아 `dplyr` 패키지 `glimpse()` 함수를 통해 데이터
+전반적인 내용을 살펴볼 수 있다.
 
-```{r penguins-DT}
+```{r}
 penguins %>% 
-  reactable::reactable()
+  glimpse()
 ```
 
-## 탐색적 데이터 분석 {#penguin-EDA}
+## 데이터 시각화 {#penguin-EDA}
 
 `palmerpenguins` 데이터셋 소개에 포함되어 있는 미국 팔머 연구소 (palmer
 station) 펭귄 물갈퀴(flipper) 길이와 체질량(body mass) 산점도를
@@ -186,9 +189,54 @@ mass_flipper <- ggplot(data = penguins,
 mass_flipper
 ```
 
-## 펭귄 데이터 저장
+## 펭귄 내보내기
+
+펭귄 데이터를 다양한 파일 형식으로 저장하는 것은 데이터 공유와 활용 측면에서 중요하다. 데이터 분석 프로젝트를 진행할 때, 협업하는 팀원들이 서로 다른 프로그래밍 언어나 도구를 사용할 수 있기 때문에, 데이터를 여러 형식으로 제공하면 원활한 협업이 가능해진다.
+
+R 사용자는 `.RDS`나 `.RData` 파일을 선호할 수 있지만, 파이썬 사용자는 `.feather`나 `.parquet` 형식을 더 편리하게 사용할 수 있다. CSV나 엑셀 파일로 저장하면, R이나 파이썬을 사용하지 않는 팀원들도 쉽게 데이터에 접근할 수 있지만 파일 용량이 커지는 단점이 있다.
+
+데이터베이스 형식인 SQLite로 저장하는 것은 대용량 데이터를 다룰 때 유용하고, 
+구글 스프레드시트와 같은 클라우드 기반 스토리지에 데이터를 저장하면, 인터넷만 연결되어 있다면 언제 어디서나 데이터에 접근할 수 있어 원격 협업 시 큰 도움이 된다.
+
+```{mermaid}
+graph LR
+   A["펭귄<br>데이터프레임"] --> B(파일 형식)
+   A --> C(데이터베이스)
+   A --> D(클라우드 스토리지)
+   
+   subgraph 파일 형식
+       B --> E(.csv)
+       B --> F(.xlsx)
+       B --> G(.rda)
+       B --> H(.rds)
+       B --> I(.feather)
+       B --> J(.parquet)
+   end
+   
+   subgraph 데이터베이스
+       C --> K(.sqlite)
+   end
+   
+   subgraph 클라우드 스토리지
+       D --> L(pins)
+       D --> M(구글시트)
+   end
+   
+   E --> E1[모든 사용자]
+   F --> F1[엑셀 사용자]
+   G --> G1[R 사용자]
+   H --> G1
+   I --> I1[R/Python 사용자]
+   J --> I1
+   K --> K1[SQL 사용자]
+   L --> G1
+   M --> E1
+```
+
 
 ### `.csv` 파일
+
+`palmerpenguins` 패키지 `penguins` 데이터프레임에서 결측치를 제거하고, `write_csv()` 함수를 사용하여 `data/penguins.csv` 파일로 저장한다.
 
 ```{r}
 library(palmerpenguins)
@@ -198,9 +246,10 @@ penguins |>
   write_csv("data/penguins.csv")
 ```
 
-
 ### `.xlsx` 엑셀 파일
 
+`readxl` 패키지는 엑셀 파일을 불러오는데 적합하지만 엑셀파일로 저장하는 기능은 없다.
+`writexl` 패키지 `write_xlsx()` 함수를 사용하여 데이터를 `data/penguins.xlsx` 파일로 저장한다. 
 
 ```{r}
 library(writexl)
@@ -212,6 +261,14 @@ penguins |>
 
 ### `.sqlite` 데이터베이스
 
+SQLite 데이터베이스를 비롯하여 많은 관계형 데이터베이스가 있다. 
+R에서 데이터베이스에 관계없이 데이터를 저장하려면 `DBI`와 
+각 데이터베이스 드라이버를 장착하고 동일한 문법에 맞춰 데이터프레임을 데이터베이스에 저장한다.
+
+`DBI` 패키지와 `RSQLite` 패키지를 로드한 후 `dbConnect()` 함수를 사용하여 SQLite 데이터베이스에 연결한다. `dbname` 인자로 데이터베이스 파일 경로와 이름을 `data/penguins.sqlite`와 같이 지정한다.
+`dbWriteTable()` 함수를 사용하여 펭귄 데이터프레임을 SQLite 데이터베이스의 테이블로 저장한다. `overwrite = TRUE` 옵션은 이미 존재하는 테이블을 덮어쓰도록 설정한다. 
+마지막으로 `dbDisconnect()` 함수로 데이터베이스 연결을 종료한다. 
+
 
 ```{r}
 library(DBI)
@@ -219,22 +276,24 @@ library(RSQLite)
 
 con <- dbConnect(RSQLite::SQLite(), dbname = "data/penguins.sqlite")
 
-# 데이터프레임을 SQLite 테이블로 저장합니다. 'my_table'이라는 이름으로 저장됩니다.
-# 데이터베이스에 같은 이름의 테이블이 이미 존재한다면, append, overwrite 또는 fail 중 하나를 선택할 수 있습니다.
 dbWriteTable(con, "penguin", penguins |> drop_na() , overwrite = TRUE)
 
-# 연결을 닫습니다.
 dbDisconnect(con)
 ```
 
-### `pins` 
+### `pins`
 
+`pins` 패키지는 R 사용자들이 데이터, 모델, 기타 R 객체를 쉽게 공유하고 관리할 수 있다.
+먼저 `board_folder()` 함수를 사용하여 로컬 폴더에 보드를 생성한다. 사용자명을 달리하여 각자 환경에 맞춰 `"C:/Users/<사용자명>/OneDrive/pins"`와 같이 보드 폴더로 설정한다.
+
+`metadata` 리스트를 생성하여 데이터에 대한 추가 정보를 제공하여 공유데이터를 전달받는 사용자 입장에서 데이터를 즉각적으로 파악할 수 있도록 한다.
+`pin_write()` 함수를 사용하여 펭귄 데이터를 보드에 핀(pin)으로 저장하면서 `name`, `title`, `description` 등의 인자를 통해 핀에 대한 정보를 제공하고, `metadata` 인자를 사용하여 앞서 생성한 메타데이터를 핀에 첨부한다.
 
 ```{r}
 #| eval: false
 library(pins)
 
-board <- board_folder("C:/Users/statkclee/OneDrive/pins") 
+board <- board_folder("C:/Users/<사용자명>/OneDrive/pins") 
 
 metadata <- list(owner       = "한국 R 사용자회",
                  deptartment = "R&D",
@@ -247,9 +306,14 @@ board  |> pin_write(penguins |> drop_na(),
                     metadata    = metadata)
 ```
 
-
 ### 구글시트
 
+구글시트는 구글에서 제공하는 엑셀과 동일한 온라인 스프레드시트 서비스로, 실시간 협업, 버전 관리, 클라우드 저장 등의 기능을 제공한다.
+
+R에서 구글시트와 구글 드라이브를 사용하기 위한 인터페이스를 제공되는 `googlesheets4`와 `googledrive` 패키지를 로드한다.
+`googledrive::drive_auth()` 함수를 호출하여 구글 드라이브 인증 과정을 거친다. 함수를 실행시키면 웹 브라우저가 열리고, 구글 계정으로 로그인하여 인증을 완료해야만 R에서 구글 드라이브와 구글시트에 접근할 수 있다.
+
+인증이 완료되면 `gs4_create()` 함수를 사용하여 새로운 구글시트를 생성한다. `name` 인자로 시트의 이름을 지정하고, `sheets` 인자로 시트에 포함될 데이터를 리스트 형태로 제공한다. `penguins`라는 이름의 시트를 생성하고, 그 안에 펭귄 데이터를 저장한다.
 
 ```{r}
 #| eval: false
@@ -270,7 +334,58 @@ gs4_create(
 #> Authentication complete.
 ```
 
-![](images/googledrive_auth.jpg)
+::: {#fig-googlesheets layout-ncol=2}
+
+![구글 인증과정](images/googledrive_auth.jpg){#fig-googlesheet-01 fig-align="center" width="306"}
+
+![구글시트 저장화면](images/googledrive_penguins.jpg){#fig-googlesheet-02 fig-align="center" width="306"}
 
 
-![](images/googledrive_penguins.jpg)
+구글 시트에 펭귄 데이터 저장
+:::
+
+
+
+### 그외 형식
+
+앞서 살펴본 데이터 형식은 데이터 과학을 처음 접하는 사용자들이 많이 사용하는 형식이다. 하지만 데이터 과학자로 성장해 나가면서 그 외에도 다양한 형식의 데이터를 마주하게 된다. 펭귄 데이터셋을 비롯한 여러 데이터를 다양한 파일 형식으로 저장할 수 있는데, 각 파일 형식마다 장단점이 있으므로 상황에 맞게 적절한 파일 형식을 선택하여 사용하는 것이 좋다.
+
+`.rds` 파일 형식은 단일 객체를 저장하고 공유하는 데 적합하며, `.rda` 파일 형식은 여러 객체를 하나의 파일에 저장하고 작업 환경을 공유하는 데 유용하다. `.rds` 파일은 크기가 작아 전송 및 저장에 효율적이며, 불필요한 객체를 함께 불러오는 것을 방지할 수 있다. 반면에 `.rda` 파일은 관련된 여러 객체를 한 번에 저장하고 불러올 수 있어 편리하다.
+
+`.rda` 파일 형식은 여러 개의 R 객체를 하나의 파일에 저장할 수 있다. `save()` 함수를 사용하여 생성하며, 파일에 저장된 객체의 이름을 그대로 사용하여 불러올 수 있다.
+`.rds` 파일 형식은 하나의 R 객체만 저장할 수 있다. `saveRDS()` 함수를 사용하여 생성하며, 파일에서 객체를 불러올 때는 `readRDS()` 함수를 사용하고 객체의 이름을 지정해야 한다.
+
+`.rda` 파일 형식으로 저장하기 위해서 `save()` 함수를 사용한다.
+
+```{r}
+#| eval: false
+save(penguins, file = "data/penguins.rda")
+```
+
+`.rds` 파일 형식으로 저장하기 위해서 `saveRDS()` 함수를 사용한다.
+
+```{r}
+#| eval: false
+saveRDS(penguins |> drop_na(), "data/penguins.rds")
+```
+
+애로우(arrow) 패키지 `.feather` 파일 형식은 데이터프레임을 빠르게 읽고 쓰는 데 최적화되어 있다. R 기본 파일 형식인 `.RDS`나 `.RData`에 비해 읽기 및 쓰기 속도가 매우 빠르고 `.feather` 파일은 언어에 구애받지 않아 파이썬, 줄리아 등 다른 프로그래밍 언어에서도 쉽게 사용할 수 있다. 다만 `.feather` 형식은 데이터프레임만 저장할 수 있고, 다른 R 객체는 저장할 수 없다는 점이 `.RDS`나 `.RData`와 다르다.
+
+`.feather` 파일 형식으로 저장하기 위해서 `arrow` 패키지 `write_feather()` 함수를 사용한다.
+
+```{r}
+#| eval: false
+library(arrow)
+write_feather(penguins |> drop_na(), "data/penguins.feather")
+```
+
+파케이(`.parquet`) 파일 형식은 행 대신 열 지향적 데이터 저장 방식을 사용하여 데이터프레임을 효율적으로 저장하고 빠르게 읽을 수 있도록 설계되었다. 파케이는 대용량 데이터 처리에 최적화되어 있어, 데이터 크기가 매우 큰 경우에도 빠른 읽기 및 쓰기 성능을 보장한다. 또한 파케이는 데이터 압축을 지원하여 저장 공간을 절약할 수 있다.
+`.parquet` 파일 형식으로 저장하기 위해서는 `arrow` 패키지
+`write_parquet()` 함수를 사용한다.
+
+```{r}
+#| eval: false
+write_parquet(penguins |> drop_na(), "data/penguins.parquet")
+```
+
+
