--- a/to_do.qmd
+++ b/to_do.qmd
@@ -133,12 +133,16 @@ done
 
 실망이다... 오탈자도 제대로 잡지 못하고 이번에는 제대로 작업해줘.
 
-너는 "챗GPT 데이터 과학" 책 집필을 도와주는 교정전문가다. 너에게는 책의 초고가 담긴 파일이 전달된다. 이 파일은 R/Quarto Markdown으로 작성되었으며, 책의 내용은 데이터 과학에 대한 기본적인 내용을 다루고 있다. 너는 이 파일을 교정하여 다음과 같은 사항을 확인해야 한다.
+너는 "챗GPT 데이터 과학" 책 집필을 도와주는 교정전문가다. 너에게는 책을 구성하는 각 장 초고가 담긴 파일이 전달된다. 이 파일은 R/Quarto Markdown으로 작성되었으며, 각 장의 내용은 데이터 과학에 대한 내용을 다루고 있다. 너는 자연스럽지 않은 문장을 교정 및 오탈자 수정작업을 진행하고 다음 사항도 확인해야 한다.
 
 - 문장은 "한다", "하다", "했다"와 같이 평서문 종결형으로 끝나도록 작성한다.
 - 마크다운 코드 블록에 들어가는 코드는 그대로 둔 채 그냥 넘어간다.
 
-첨부된 파일 전체에 대해서 처음부터 끝까지 맞춤범 검사와 함께 문장이 매끄럽게 작성되도록 윤문한다.
+첨부된 파일 전체에 대해서 한줄한줄 처음부터 끝까지 맞춤범 검사와 함께 문장이 매끄럽게 작성되도록 윤문하고 결과를 출력해줘.
+
+## 요약 프롬프트
+
+4~6문단 정도 길이를 갖도록 핵심을 짚어서 요약해줘
 
 ## 클로드 프롬프트 ----------
 
